Fix project location

--- a/src/GRinger.Model/GRinger.Model.csproj
+++ b/src/GRinger.Model/GRinger.Model.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GRinger.Model.Abstractions\GRinger.Model.Abstractions.csproj" />
+    <ProjectReference Include="..\GRinger.Model.Abstractions\GRinger.Model.Abstractions.csproj" />
   </ItemGroup>
 </Project>
